gen/com/prezi/intellij/spaghetti/parser/SpaghettiModuleParser.java
// This is a generated file. Not intended for manual editing.
package com.prezi.intellij.spaghetti.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.openapi.diagnostic.Logger;
import static com.prezi.intellij.spaghetti.psi.SpaghettiModuleTypes.*;
import static com.prezi.intellij.spaghetti.parser.SpaghettiModuleParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class SpaghettiModuleParser implements PsiParser {

  public static final Logger LOG_ = Logger.getInstance("com.prezi.intellij.spaghetti.parser.SpaghettiModuleParser");

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    if (root_ == ARRAY_QUALIFIER) {
      result_ = ArrayQualifier(builder_, 0);
    }
    else if (root_ == ANNOTATION) {
      result_ = annotation(builder_, 0);
    }
    else if (root_ == ANNOTATION_PARAMETER) {
      result_ = annotationParameter(builder_, 0);
    }
    else if (root_ == ANNOTATION_PARAMETERS) {
      result_ = annotationParameters(builder_, 0);
    }
    else if (root_ == ANNOTATION_VALUE) {
      result_ = annotationValue(builder_, 0);
    }
    else if (root_ == ANNOTATIONS) {
      result_ = annotations(builder_, 0);
    }
    else if (root_ == BOOL_VALUE) {
      result_ = boolValue(builder_, 0);
    }
    else if (root_ == COMPLEX_TYPE) {
      result_ = complexType(builder_, 0);
    }
    else if (root_ == CONST_DEFINITION) {
      result_ = constDefinition(builder_, 0);
    }
    else if (root_ == CONST_ENTRY) {
      result_ = constEntry(builder_, 0);
    }
    else if (root_ == CONST_ENTRY_DECL) {
      result_ = constEntryDecl(builder_, 0);
    }
    else if (root_ == ENUM_DEFINITION) {
      result_ = enumDefinition(builder_, 0);
    }
    else if (root_ == ENUM_VALUE) {
      result_ = enumValue(builder_, 0);
    }
    else if (root_ == EXTERN_TYPE_DEFINITION) {
      result_ = externTypeDefinition(builder_, 0);
    }
    else if (root_ == IMPORT_DECLARATION) {
      result_ = importDeclaration(builder_, 0);
    }
    else if (root_ == INTERFACE_DEFINITION) {
      result_ = interfaceDefinition(builder_, 0);
    }
    else if (root_ == INTERFACE_METHOD_DEFINITION) {
      result_ = interfaceMethodDefinition(builder_, 0);
    }
    else if (root_ == METHOD_DEFINITION) {
      result_ = methodDefinition(builder_, 0);
    }
    else if (root_ == METHOD_PARAMETER) {
      result_ = methodParameter(builder_, 0);
    }
    else if (root_ == METHOD_PARAMETERS) {
      result_ = methodParameters(builder_, 0);
    }
    else if (root_ == MODULE_ELEMENT) {
      result_ = moduleElement(builder_, 0);
    }
    else if (root_ == MODULE_METHOD_DEFINITION) {
      result_ = moduleMethodDefinition(builder_, 0);
    }
    else if (root_ == MODULE_SPEC) {
      result_ = moduleSpec(builder_, 0);
    }
    else if (root_ == OBJECT_TYPE) {
      result_ = objectType(builder_, 0);
    }
    else if (root_ == PRIMITIVE_TYPE) {
      result_ = primitiveType(builder_, 0);
    }
    else if (root_ == PROPERTY_DEFINITION) {
      result_ = propertyDefinition(builder_, 0);
    }
    else if (root_ == QUALIFIED_NAME) {
      result_ = qualifiedName(builder_, 0);
    }
    else if (root_ == RETURN_TYPE) {
      result_ = returnType(builder_, 0);
    }
    else if (root_ == STRUCT_DEFINITION) {
      result_ = structDefinition(builder_, 0);
    }
    else if (root_ == SUPER_INTERFACE_DEFINITION) {
      result_ = superInterfaceDefinition(builder_, 0);
    }
    else if (root_ == TYPE) {
      result_ = type(builder_, 0);
    }
    else if (root_ == TYPE_ARGUMENTS) {
      result_ = typeArguments(builder_, 0);
    }
    else if (root_ == TYPE_CHAIN) {
      result_ = typeChain(builder_, 0);
    }
    else if (root_ == TYPE_CHAIN_ELEMENT) {
      result_ = typeChainElement(builder_, 0);
    }
    else if (root_ == TYPE_CHAIN_ELEMENTS) {
      result_ = typeChainElements(builder_, 0);
    }
    else if (root_ == TYPE_CHAIN_RETURN_TYPE) {
      result_ = typeChainReturnType(builder_, 0);
    }
    else if (root_ == TYPE_DEFINITION) {
      result_ = typeDefinition(builder_, 0);
    }
    else if (root_ == TYPE_NAME_PAIR) {
      result_ = typeNamePair(builder_, 0);
    }
    else if (root_ == TYPE_PARAMETERS) {
      result_ = typeParameters(builder_, 0);
    }
    else {
      result_ = parse_root_(root_, builder_, 0);
    }
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
    return builder_.getTreeBuilt();
  }

  protected boolean parse_root_(final IElementType root_, final PsiBuilder builder_, final int level_) {
    return SpaghettiModuleDefinition(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // '[' ']'
  public static boolean ArrayQualifier(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ArrayQualifier")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<array qualifier>");
    result_ = consumeToken(builder_, "[");
    result_ = result_ && consumeToken(builder_, "]");
    exit_section_(builder_, level_, marker_, ARRAY_QUALIFIER, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // annotations?
  // 	'module' moduleSpec
  // 	CL
  // 	moduleElement*
  // 	CR
  static boolean SpaghettiModuleDefinition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "SpaghettiModuleDefinition")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = SpaghettiModuleDefinition_0(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, MODULE);
    result_ = result_ && moduleSpec(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, CL);
    result_ = result_ && SpaghettiModuleDefinition_4(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, CR);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // annotations?
  private static boolean SpaghettiModuleDefinition_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "SpaghettiModuleDefinition_0")) return false;
    annotations(builder_, level_ + 1);
    return true;
  }

  // moduleElement*
  private static boolean SpaghettiModuleDefinition_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "SpaghettiModuleDefinition_4")) return false;
    int pos_ = current_position_(builder_);
    while (true) {
      if (!moduleElement(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "SpaghettiModuleDefinition_4", pos_)) break;
      pos_ = current_position_(builder_);
    }
    return true;
  }

  /* ********************************************************** */
  // '@' id (PL annotationParameters? PR)?
  public static boolean annotation(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotation")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<annotation>");
    result_ = consumeToken(builder_, "@");
    result_ = result_ && consumeToken(builder_, ID);
    result_ = result_ && annotation_2(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, ANNOTATION, result_, false, null);
    return result_;
  }

  // (PL annotationParameters? PR)?
  private static boolean annotation_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotation_2")) return false;
    annotation_2_0(builder_, level_ + 1);
    return true;
  }

  // PL annotationParameters? PR
  private static boolean annotation_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotation_2_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, PL);
    result_ = result_ && annotation_2_0_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, PR);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // annotationParameters?
  private static boolean annotation_2_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotation_2_0_1")) return false;
    annotationParameters(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // id '=' annotationValue
  public static boolean annotationParameter(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotationParameter")) return false;
    if (!nextTokenIs(builder_, ID)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, ID);
    result_ = result_ && consumeToken(builder_, "=");
    result_ = result_ && annotationValue(builder_, level_ + 1);
    exit_section_(builder_, marker_, ANNOTATION_PARAMETER, result_);
    return result_;
  }

  /* ********************************************************** */
  // annotationValue | annotationParameter ( ',' annotationParameter )*
  public static boolean annotationParameters(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotationParameters")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<annotation parameters>");
    result_ = annotationValue(builder_, level_ + 1);
    if (!result_) result_ = annotationParameters_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, ANNOTATION_PARAMETERS, result_, false, null);
    return result_;
  }

  // annotationParameter ( ',' annotationParameter )*
  private static boolean annotationParameters_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotationParameters_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = annotationParameter(builder_, level_ + 1);
    result_ = result_ && annotationParameters_1_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // ( ',' annotationParameter )*
  private static boolean annotationParameters_1_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotationParameters_1_1")) return false;
    int pos_ = current_position_(builder_);
    while (true) {
      if (!annotationParameters_1_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "annotationParameters_1_1", pos_)) break;
      pos_ = current_position_(builder_);
    }
    return true;
  }

  // ',' annotationParameter
  private static boolean annotationParameters_1_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotationParameters_1_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, ",");
    result_ = result_ && annotationParameter(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // null | boolValue | intValue | floatValue | stringValue
  public static boolean annotationValue(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotationValue")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<annotation value>");
    result_ = consumeToken(builder_, NULL);
    if (!result_) result_ = boolValue(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, INTVALUE);
    if (!result_) result_ = consumeToken(builder_, FLOATVALUE);
    if (!result_) result_ = consumeToken(builder_, STRINGVALUE);
    exit_section_(builder_, level_, marker_, ANNOTATION_VALUE, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // annotation+
  public static boolean annotations(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotations")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<annotations>");
    result_ = annotation(builder_, level_ + 1);
    int pos_ = current_position_(builder_);
    while (result_) {
      if (!annotation(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "annotations", pos_)) break;
      pos_ = current_position_(builder_);
    }
    exit_section_(builder_, level_, marker_, ANNOTATIONS, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // true | false
  public static boolean boolValue(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "boolValue")) return false;
    if (!nextTokenIs(builder_, "<bool value>", FALSE, TRUE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<bool value>");
    result_ = consumeToken(builder_, TRUE);
    if (!result_) result_ = consumeToken(builder_, FALSE);
    exit_section_(builder_, level_, marker_, BOOL_VALUE, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // type | typeChain
  public static boolean complexType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "complexType")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<complex type>");
    result_ = type(builder_, level_ + 1);
    if (!result_) result_ = typeChain(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, COMPLEX_TYPE, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // annotations? const ID '{' constEntry* '}'
  public static boolean constDefinition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constDefinition")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<const definition>");
    result_ = constDefinition_0(builder_, level_ + 1);
    result_ = result_ && consumeTokens(builder_, 0, CONST, ID);
    result_ = result_ && consumeToken(builder_, CL);
    result_ = result_ && constDefinition_4(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, CR);
    exit_section_(builder_, level_, marker_, CONST_DEFINITION, result_, false, null);
    return result_;
  }

  // annotations?
  private static boolean constDefinition_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constDefinition_0")) return false;
    annotations(builder_, level_ + 1);
    return true;
  }

  // constEntry*
  private static boolean constDefinition_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constDefinition_4")) return false;
    int pos_ = current_position_(builder_);
    while (true) {
      if (!constEntry(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "constDefinition_4", pos_)) break;
      pos_ = current_position_(builder_);
    }
    return true;
  }

  /* ********************************************************** */
  // annotations? constEntryDecl
  public static boolean constEntry(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constEntry")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<const entry>");
    result_ = constEntry_0(builder_, level_ + 1);
    result_ = result_ && constEntryDecl(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, CONST_ENTRY, result_, false, null);
    return result_;
  }

  // annotations?
  private static boolean constEntry_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constEntry_0")) return false;
    annotations(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // bool? ID '=' boolValue
  // 	| int? ID '=' intValue
  // 	| float? ID '=' floatValue
  // 	| string? ID '=' stringValue
  public static boolean constEntryDecl(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constEntryDecl")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<const entry decl>");
    result_ = constEntryDecl_0(builder_, level_ + 1);
    if (!result_) result_ = constEntryDecl_1(builder_, level_ + 1);
    if (!result_) result_ = constEntryDecl_2(builder_, level_ + 1);
    if (!result_) result_ = constEntryDecl_3(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, CONST_ENTRY_DECL, result_, false, null);
    return result_;
  }

  // bool? ID '=' boolValue
  private static boolean constEntryDecl_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constEntryDecl_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = constEntryDecl_0_0(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, ID);
    result_ = result_ && consumeToken(builder_, "=");
    result_ = result_ && boolValue(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // bool?
  private static boolean constEntryDecl_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constEntryDecl_0_0")) return false;
    consumeToken(builder_, BOOL);
    return true;
  }

  // int? ID '=' intValue
  private static boolean constEntryDecl_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constEntryDecl_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = constEntryDecl_1_0(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, ID);
    result_ = result_ && consumeToken(builder_, "=");
    result_ = result_ && consumeToken(builder_, INTVALUE);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // int?
  private static boolean constEntryDecl_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constEntryDecl_1_0")) return false;
    consumeToken(builder_, INT);
    return true;
  }

  // float? ID '=' floatValue
  private static boolean constEntryDecl_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constEntryDecl_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = constEntryDecl_2_0(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, ID);
    result_ = result_ && consumeToken(builder_, "=");
    result_ = result_ && consumeToken(builder_, FLOATVALUE);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // float?
  private static boolean constEntryDecl_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constEntryDecl_2_0")) return false;
    consumeToken(builder_, FLOAT);
    return true;
  }

  // string? ID '=' stringValue
  private static boolean constEntryDecl_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constEntryDecl_3")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = constEntryDecl_3_0(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, ID);
    result_ = result_ && consumeToken(builder_, "=");
    result_ = result_ && consumeToken(builder_, STRINGVALUE);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // string?
  private static boolean constEntryDecl_3_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "constEntryDecl_3_0")) return false;
    consumeToken(builder_, STRING);
    return true;
  }

  /* ********************************************************** */
  // annotations? 'enum' ID '{'	enumValue* '}'
  public static boolean enumDefinition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "enumDefinition")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<enum definition>");
    result_ = enumDefinition_0(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, "enum");
    result_ = result_ && consumeToken(builder_, ID);
    result_ = result_ && consumeToken(builder_, CL);
    result_ = result_ && enumDefinition_4(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, CR);
    exit_section_(builder_, level_, marker_, ENUM_DEFINITION, result_, false, null);
    return result_;
  }

  // annotations?
  private static boolean enumDefinition_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "enumDefinition_0")) return false;
    annotations(builder_, level_ + 1);
    return true;
  }

  // enumValue*
  private static boolean enumDefinition_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "enumDefinition_4")) return false;
    int pos_ = current_position_(builder_);
    while (true) {
      if (!enumValue(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "enumDefinition_4", pos_)) break;
      pos_ = current_position_(builder_);
    }
    return true;
  }

  /* ********************************************************** */
  // annotations? ID
  public static boolean enumValue(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "enumValue")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<enum value>");
    result_ = enumValue_0(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, ID);
    exit_section_(builder_, level_, marker_, ENUM_VALUE, result_, false, null);
    return result_;
  }

  // annotations?
  private static boolean enumValue_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "enumValue_0")) return false;
    annotations(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // annotations? extern interface qualifiedName
  public static boolean externTypeDefinition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "externTypeDefinition")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<extern type definition>");
    result_ = externTypeDefinition_0(builder_, level_ + 1);
    result_ = result_ && consumeTokens(builder_, 0, EXTERN, INTERFACE);
    result_ = result_ && qualifiedName(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, EXTERN_TYPE_DEFINITION, result_, false, null);
    return result_;
  }

  // annotations?
  private static boolean externTypeDefinition_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "externTypeDefinition_0")) return false;
    annotations(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // import qualifiedName (AS ID)?
  public static boolean importDeclaration(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "importDeclaration")) return false;
    if (!nextTokenIs(builder_, IMPORT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IMPORT);
    result_ = result_ && qualifiedName(builder_, level_ + 1);
    result_ = result_ && importDeclaration_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, IMPORT_DECLARATION, result_);
    return result_;
  }

  // (AS ID)?
  private static boolean importDeclaration_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "importDeclaration_2")) return false;
    importDeclaration_2_0(builder_, level_ + 1);
    return true;
  }

  // AS ID
  private static boolean importDeclaration_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "importDeclaration_2_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, AS, ID);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // annotations?
  // 	interface ID typeParameters?
  // 	( extends superInterfaceDefinition ( ',' superInterfaceDefinition )* )?
  // 	'{' interfaceMethodDefinition* '}'
  public static boolean interfaceDefinition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "interfaceDefinition")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<interface definition>");
    result_ = interfaceDefinition_0(builder_, level_ + 1);
    result_ = result_ && consumeTokens(builder_, 0, INTERFACE, ID);
    result_ = result_ && interfaceDefinition_3(builder_, level_ + 1);
    result_ = result_ && interfaceDefinition_4(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, CL);
    result_ = result_ && interfaceDefinition_6(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, CR);
    exit_section_(builder_, level_, marker_, INTERFACE_DEFINITION, result_, false, null);
    return result_;
  }

  // annotations?
  private static boolean interfaceDefinition_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "interfaceDefinition_0")) return false;
    annotations(builder_, level_ + 1);
    return true;
  }

  // typeParameters?
  private static boolean interfaceDefinition_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "interfaceDefinition_3")) return false;
    typeParameters(builder_, level_ + 1);
    return true;
  }

  // ( extends superInterfaceDefinition ( ',' superInterfaceDefinition )* )?
  private static boolean interfaceDefinition_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "interfaceDefinition_4")) return false;
    interfaceDefinition_4_0(builder_, level_ + 1);
    return true;
  }

  // extends superInterfaceDefinition ( ',' superInterfaceDefinition )*
  private static boolean interfaceDefinition_4_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "interfaceDefinition_4_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, EXTENDS);
    result_ = result_ && superInterfaceDefinition(builder_, level_ + 1);
    result_ = result_ && interfaceDefinition_4_0_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // ( ',' superInterfaceDefinition )*
  private static boolean interfaceDefinition_4_0_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "interfaceDefinition_4_0_2")) return false;
    int pos_ = current_position_(builder_);
    while (true) {
      if (!interfaceDefinition_4_0_2_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "interfaceDefinition_4_0_2", pos_)) break;
      pos_ = current_position_(builder_);
    }
    return true;
  }

  // ',' superInterfaceDefinition
  private static boolean interfaceDefinition_4_0_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "interfaceDefinition_4_0_2_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, ",");
    result_ = result_ && superInterfaceDefinition(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // interfaceMethodDefinition*
  private static boolean interfaceDefinition_6(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "interfaceDefinition_6")) return false;
    int pos_ = current_position_(builder_);
    while (true) {
      if (!interfaceMethodDefinition(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "interfaceDefinition_6", pos_)) break;
      pos_ = current_position_(builder_);
    }
    return true;
  }

  /* ********************************************************** */
  // annotations? methodDefinition
  public static boolean interfaceMethodDefinition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "interfaceMethodDefinition")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<interface method definition>");
    result_ = interfaceMethodDefinition_0(builder_, level_ + 1);
    result_ = result_ && methodDefinition(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, INTERFACE_METHOD_DEFINITION, result_, false, null);
    return result_;
  }

  // annotations?
  private static boolean interfaceMethodDefinition_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "interfaceMethodDefinition_0")) return false;
    annotations(builder_, level_ + 1);
    return true;
  }
